[FIX] shadow faq_question on mobile

--- a/style.css
+++ b/style.css
@@ -161,7 +161,8 @@ body:not(.contact-page) {
     letter-spacing: 1px;
     font-family: var(--font-main);
 }
-/*======= LOGO NAVBAR sin sombra en el tap del movil ====== */
+/*======= LOGO NAVBAR sin sombra en el tap del movil ======
+=========================================================== */
 .logo-nav__link,
 .logo-nav,
 .logo-nav img,
@@ -1705,14 +1706,12 @@ footer {
     justify-content: space-between;
     gap: 30px;
 }
-
 .faq__icon {
     margin-left: 12px;
     transition: transform 0.3s;
     display: flex;
     align-items: center;
 }
-
 .faq__icon img {
     width: 20px;
     height: 20px;
@@ -1720,6 +1719,30 @@ footer {
     color: var(--color-secondary);
     transition: color 0.2s;
 }
+
+
+/*======= FAQ QUESTION sin sombra en el tap del movil ======
+=========================================================== */
+.faq__question,
+.faq__question span {
+    -webkit-tap-highlight-color: transparent !important;
+    outline: none !important;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent !important;
+}
+.faq__question:focus,
+.faq__question:active {
+    outline: none !important;
+    -webkit-tap-highlight-color: transparent !important;
+}
+
+
+
+
+
+
 
 .faq__item.open .faq__icon {
     transform: rotate(90deg);
